--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6376,7 +6376,7 @@ a.close.disabled {
 
 @media (min-width: 576px) {
   .modal-dialog {
-    max-width: 500px;
+    max-width: 900px!important;
     margin: 1.75rem auto;
   }
 
