--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,6 @@
 @import "~bootstrap";
 @import "~select2/dist/css/select2.css";
 
-/*@media (min-width: 576px){*/
-    /*.modal-dialog {*/
-        /*max-width: 800px!important;*/
-
-    /*}*/
-/*}*/
 body{
     height: 100vh;
 }
@@ -29,7 +23,6 @@ a{
     cursor: pointer;
     color: #41464b;
     padding-left: 5px;
-    /* text-align: center; */
     line-height: 40px;
     border-radius:5px;
 }
@@ -167,9 +160,9 @@ a{
 .row-with-float > [class^=col-] {
     float: left;
 }
-.row-with-float > [class^=col-] + [class^=col-] {
+/* .row-with-float > [class^=col-] + [class^=col-] {
 
-}
+} */
 .row-with-float::before, .row-with-float::after {
     content: '';
     display: table;
@@ -215,10 +208,7 @@ a{
     -ms-transform: rotate(-90deg); /* IE 9 */
     transform: rotate(-90deg);
 }
-.upov_max_height{
-    /*max-height: 290px;*/
-    /*overflow: hidden;*/
-}
+
 .hidden-event {
     display: none;
 }
@@ -288,3 +278,48 @@ a{
     margin-left: 10px;
     font-size: 14px;
 }
+
+.tooltipblock {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltipblock .tooltiptext {
+    visibility: hidden;
+    width: 140px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -75px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .tooltipblock .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  .tooltipblock:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+  .copy_button{
+    background: none;
+    border: none;
+  }
+  .gap-20 {
+    gap: 20px;
+  }
