--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -217,7 +217,7 @@ a{
 }
 
 #editor-container{
-    min-height: 100px;
+    min-height: 200px;
 }
 
 .border-right{
@@ -323,3 +323,6 @@ a{
   .gap-20 {
     gap: 20px;
   }
+.break-word {
+    word-break: break-all;
+}
