--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11723,3 +11723,10 @@ a{
 .active_item > span{
     border-bottom: 2px solid blue;
 }
+
+.f-w-bold{
+    font-weight: bold;
+}
+.p-events-n{
+    pointer-events: none;
+}
